--- a/views/services.pug
+++ b/views/services.pug
@@ -1,6 +1,7 @@
 extends layout
 
 block content
-    h2 Services
+    .container
+        h2 Services
 
-    p This is a test website.  There is currently no content for this page.
+        p This is a test website.  There is currently no content for this page.
