--- a/public/css/scss/_home.scss
+++ b/public/css/scss/_home.scss
@@ -19,10 +19,8 @@
   margin-bottom: 3em;
 }
 
-#latest_work {
-}
-
 .project_card {
+  background-color: #eee;
   border: 1px solid black;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 
