--- a/views/admin.pug
+++ b/views/admin.pug
@@ -60,5 +60,7 @@ block content
                         a.project--deletebtn(href=`/admin/projects/delete/${project._id}`) 
                             i(class="far fa-trash-alt")
                         img(src=`./uploads/${project.imageSource}`)
-                        p.project--listitem-message=project.desc
-                        p.project--listitem-name=project.name
+                        .project--listitem-desc
+                            h2.project--listitem-name=project.name
+                            p.project--listitem-message=project.desc
+                        
