--- a/views/layout.pug
+++ b/views/layout.pug
@@ -45,10 +45,8 @@ html(lang='en')
       footer
         .footer_container
           .footer_contact
-            p.footer_contact_text
-                | Contact us for a quote
-                br
-                | or to discuss your project
+            p.footer_contact_text Contact us for a quote
+            p.footer_contact_text or to discuss your project
             a.contact_button(href='/contact') Contact Us
           .footer_contact_details
             p.footer_contact_text Tel: 0800 123 1234
