--- a/public/css/scss/_admin.scss
+++ b/public/css/scss/_admin.scss
@@ -1,17 +1,17 @@
 .admin--header {
-  font-size: 3em;
+  font-size: 3rem;
   color: color(primary);
   text-align: center;
 }
 
 #admin--text {
   width: 80%;
-  margin-bottom: 25px;
+  margin-bottom: 2em;
 }
 .admin--text {
-  font-size: 1.8em;
+  font-size: 1.8rem;
   text-align: justify;
-  margin: 10px 0;
+  margin: 0.3em 0;
 }
 
 // Form CSS
@@ -20,7 +20,7 @@ $form-width: 80%;
 $form-background: none;
 $form-primary-color: color(primary);
 $form-secondary-color: color(accent);
-$form-padding: 40px;
+$form-padding: 2em;
 $form-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.3);
 $form-border-radius: 20px 5px;
 
@@ -44,7 +44,7 @@ $input-border-bottom: 2px solid $form-secondary-color;
 
   .form--heading {
     text-align: center;
-    margin: 0 0 30px;
+    margin: 0 0 2em 0;
     padding: 0;
     color: $form-primary-color;
   }
@@ -119,16 +119,16 @@ textarea:invalid {
   align-items: center;
   border: 1px solid color(primary);
   border-radius: $form-border-radius;
-  margin: 2px 0;
-  padding: 15px 5px;
+  margin: 0.5em 0;
+  padding: 1.5em 0.3em;
 
   &-name {
-    font-size: 1.3em;
+    font-size: 1.3rem;
     color: color(accent);
   }
 
   &-message {
-    font-size: 1.4em;
+    font-size: 1.4rem;
   }
 }
 
@@ -146,9 +146,10 @@ textarea:invalid {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0.1em;
 
   i {
-    font-size: 10px;
+    font-size: 0.7rem;
   }
 }
 
