--- a/public/css/scss/_home.scss
+++ b/public/css/scss/_home.scss
@@ -1,5 +1,5 @@
 .container {
-  padding: 10px 20px;
+  padding: 1em 2em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,23 +26,23 @@
 
   img {
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 1em;
   }
 
   .project_card_desc {
-    padding: 15px;
+    padding: 0.8em;
     display: flex;
     flex-direction: column;
 
     h3 {
       color: color(accent);
-      font-size: 2em;
+      font-size: 2rem;
       text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
-      margin-bottom: 5px;
+      margin-bottom: 0.2em;
     }
 
     .project_desc {
-      margin-bottom: 25px;
+      margin-bottom: 2em;
     }
 
     a {
