--- a/public/css/scss/main.css
+++ b/public/css/scss/main.css
@@ -117,9 +117,9 @@ header .logo_header .header_contact {
 
 .contact_button,
 .admin_button {
-  padding: 5px 15px;
+  padding: 0.2em 0.6em;
   border-radius: 5px;
-  margin-right: 5px;
+  margin-right: 0.3em;
 }
 
 .contact_button {
@@ -160,11 +160,11 @@ nav ul {
 }
 
 nav ul li {
-  margin: 0 10px;
+  margin: 0 0.5em;
 }
 
 nav ul li a {
-  font-size: 1.1em;
+  font-size: 1.1rem;
   color: white;
 }
 
@@ -176,7 +176,7 @@ nav ul li a:hover, nav ul li a:active {
   width: 100%;
   position: absolute;
   bottom: 0;
-  z-index: 1;
+  z-index: -1;
 }
 
 footer {
@@ -195,26 +195,26 @@ footer .footer_container {
 }
 
 footer .footer_container .footer_contact {
-  padding: 15px;
+  padding: 1em;
 }
 
 footer .footer_container .footer_contact_details {
-  padding: 15px;
+  padding: 1em;
 }
 
 footer .copyright {
   text-align: center;
   color: #99ff3d;
-  margin-bottom: 10px;
+  margin-bottom: 1em;
 }
 
 .footer_contact_text {
   color: white;
-  padding-bottom: 10px;
+  padding-bottom: 0.2em;
 }
 
 .container {
-  padding: 10px 20px;
+  padding: 1em 2em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -256,11 +256,11 @@ footer .copyright {
 
 .project_card img {
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 1em;
 }
 
 .project_card .project_card_desc {
-  padding: 15px;
+  padding: 0.8em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -272,13 +272,13 @@ footer .copyright {
 
 .project_card .project_card_desc h3 {
   color: #99ff3d;
-  font-size: 2em;
+  font-size: 2rem;
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
-  margin-bottom: 5px;
+  margin-bottom: 0.2em;
 }
 
 .project_card .project_card_desc .project_desc {
-  margin-bottom: 25px;
+  margin-bottom: 2em;
 }
 
 .project_card .project_card_desc a {
@@ -289,20 +289,20 @@ footer .copyright {
 }
 
 .admin--header {
-  font-size: 3em;
+  font-size: 3rem;
   color: #065b13;
   text-align: center;
 }
 
 #admin--text {
   width: 80%;
-  margin-bottom: 25px;
+  margin-bottom: 2em;
 }
 
 .admin--text {
-  font-size: 1.8em;
+  font-size: 1.8rem;
   text-align: justify;
-  margin: 10px 0;
+  margin: 0.3em 0;
 }
 
 #form--container {
@@ -325,7 +325,7 @@ footer .copyright {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-radius: 20px 5px;
-  padding: 40px;
+  padding: 2em;
   width: 80%;
   background: none;
   -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.3);
@@ -335,7 +335,7 @@ footer .copyright {
 
 .form--container .form--heading {
   text-align: center;
-  margin: 0 0 30px;
+  margin: 0 0 2em 0;
   padding: 0;
   color: #065b13;
 }
@@ -422,17 +422,17 @@ textarea:invalid {
           align-items: center;
   border: 1px solid #065b13;
   border-radius: 20px 5px;
-  margin: 2px 0;
-  padding: 15px 5px;
+  margin: 0.5em 0;
+  padding: 1.5em 0.3em;
 }
 
 .testimonial--listitem-name {
-  font-size: 1.3em;
+  font-size: 1.3rem;
   color: #99ff3d;
 }
 
 .testimonial--listitem-message {
-  font-size: 1.4em;
+  font-size: 1.4rem;
 }
 
 .testimonial--deletebtn,
@@ -455,11 +455,12 @@ textarea:invalid {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding: 0.1em;
 }
 
 .testimonial--deletebtn i,
 .project--deletebtn i {
-  font-size: 10px;
+  font-size: 0.7rem;
 }
 
 .projects--container {
@@ -520,7 +521,7 @@ textarea:invalid {
 
 .testimonial {
   text-align: center;
-  font-size: 1.5em;
+  font-size: 1.5rem;
   color: #065b13;
   margin-bottom: 5px;
 }
@@ -528,20 +529,6 @@ textarea:invalid {
 .author {
   text-align: center;
   color: #99ff3d;
-}
-
-.carouselIndicator {
-  border-radius: 50%;
-  width: 5px;
-  height: 15px;
-  border: 0;
-  margin: 5px;
-  background: rgba(0, 0, 0, 0.3);
-  cursor: pointer;
-}
-
-.currentSlide {
-  background: rgba(0, 0, 0, 0.7);
 }
 
 .project--container {
