--- a/public/css/scss/main.css
+++ b/public/css/scss/main.css
@@ -566,4 +566,49 @@ textarea:invalid {
   color: #065b13;
   text-align: justify;
 }
+
+.services {
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  grid-gap: 0.2em;
+  margin-top: 2em;
+  margin-bottom: 10em;
+}
+
+.service_card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.service_card img {
+  width: 90%;
+  -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.3);
+          box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.3);
+}
+
+.service_card_desc {
+  width: 90%;
+  padding-top: 1em;
+}
+
+.service_card_desc h3 {
+  color: #065b13;
+  font-size: 1.6rem;
+  padding-bottom: 0.3em;
+}
+
+.service_card_desc p {
+  text-align: justify;
+}
 /*# sourceMappingURL=main.css.map */
